--- a/index.html
+++ b/index.html
@@ -252,21 +252,6 @@
                 }
             </script>
 
-
-
-<!-- <section class="project section">
-    <div class="plan__container bd-grid">
-        <div class="plan__data">
-            <h2 class="section-title plan__title">Do you have a project in mind?</h2>
-            <p class="plan__description">I am constantly looking for opportunties to exhibit and hone my skills. Do contact me with suggestions, guidance and collaborations.</p>
-            <a href="#contactme" class="button plan__button">Contact Me</a>
-        </div>
-
-        <img src="static/img/memojithink.png" alt="" class="plan__img">
-    </div>
-
-</section> -->
-
         <div >
             <h3 class="plans__title" id="plans">Here are some of CC's Curated Plans:</h3>
             <div class="container-card">
@@ -379,7 +364,7 @@
 
 
 
-            <!--==================== QUESTIONS ====================-->
+            <!--==================== FAQ ====================-->
             <section class="questions section" id="faqs">
                 <h2 class="section__title-center questions__title container">
                     Frequently Asked Questions
